The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

New Features:

* util-core: Introduce an optional max capacity to `AsyncQueue`.
  Modified `AsyncQueue.offer` to return a boolean indicating whether or not the
  item was accepted. Added `AsyncQueue.drain(): Try[Queue]`. ``RB_ID=745567`

Changes in Runtime Behavior:

* util-logging: `QueueingHandler` does not create a separate thread per instance. ``RB_ID=745567`

* util-core: The Scheduler clock stats were decommissioned as they only make sense
  relative to `wallTime` and the tracking error we have experienced `wallTime` and
  `*Time` make it impossible to use them reliably. It is not worth the performance
  and code complexity to support them.

6.28.0  2015-09-25

API Changes:

  * util-core: Remove deprecated methods from `com.twitter.util.Var`.

    To migrate `observe` and `foreach`, given `aVar.observe { t => somethingWith(t) }`
    you would write `aVar.changes.register(Witness({ t => somethingWith(t) }))`.

    To migrate `observeUntil`, given `aVar.observeUntil(_ == something)`,
    you would write `aVar.changes.filter(_ == something).toFuture()`.

    To migrate `observeTo`, given `aVar.observeTo(anAtomicReference)`,
    you would write `aVar.changes.register(Witness(anAtomicReference))`.

    ``RB_ID=744282``

6.27.0  2015-08-28

API Changes:

  * util-core: `TimeFormat` optionally takes a `TimeZone` in the constructor.
    If not provided, it uses UTC.

6.26.0  2015-07-27

API Changes:
  * util-core: `Activity`, `BoundedStack`, `RingBuffer` and `Var` migrated
    off of deprecated `ClassManifest` to `ClassTag`. ``RB_ID=720455``

  * util-core: Added Spool#zip

  * util-core: Removed deprecated methods `Future.void` and `Future$.void()`.
    Use `Future.voided` and `Future$.Void` instead. ``RB_ID=720427``

Changes in Runtime Behavior:
  * util-core: `Promise.forwardInterruptsTo(other)` is a no-op if the